# ShimejiEE-cross-platform

./: .gitignore  CHANGES.md  LICENSE  LICENSE.md  MANIFEST.MF  README.md  TODO.md  build.py  gen.sh  jre_dl.py  pom.xml  release.sh
ShimejiEE/: ShimejiEE-launcher
ShimejiEE/conf/: CalmBehavior.xml  Mascot.xsd  MischievousBehavior.xml  ProfessionalBehavior.xml  actions.xml  behaviors.xml  language.properties  language_en.properties  language_nl.properties  language_vi.properties  language_zh_CN.properties  schema.properties  settings.properties
docs/: advanced-scripting.md  building.md  config-basics.md  config-docs.md  devnotes.md  settings-keys.md  settings-reference.md  shimejicli.py
docs/original-docs/: group-finity-license.txt  group-finity-readme.md  kilkakon-changelog.md  kilkakon-readme.md  shimeji-ee-project-changelog.md  shimeji-ee-project-devnotes.md
ext-resources/: launcher  shimejicli.py
ext-resources/conf/: Mascot.xsd  MischievousBehavior.xml  ProfessionalBehavior.xml  actions.xml  language_fr.properties  language_ro.properties  logging.properties  script-translations.properties  settings.properties  user-behaviornames.properties
ext-resources/img/unused/: readme.md
ext-resources/lib/: libShimejiMacNative.dylib  readme.txt
src/com/group_finity/mascot/: DebugWindow.form  DebugWindow.java  LogFormatter.java  Main.java  Manager.java  Mascot.java  NativeFactory.java  Platform.java
src/com/group_finity/mascot/action/: Action.java  ActionBase.java  Animate.java  BorderedAction.java  Breed.java  Broadcast.java  BroadcastMove.java  BroadcastStay.java  ComplexAction.java  Dragged.java  Fall.java  FallWithIE.java  InstantAction.java  Jump.java  (+17 more)
src/main/headers/: com_group_finity_mascotnative_macclassic_MacSwingJni.h
src/main/native/macclassic/: project.yml
src/main/native/macjni/: CMakeLists.txt  project.yml
src/main/native/macjni/src/: JdkCode.m  JniHelper.h  JniHelper.m  MacJniNativeImage.m  MacJniShimejiWindow.m  ShimejiWindow.h
src/main/native/macjni/src/environment/: MacJniEnvironment.m  ShimejiEnvironment.h  ShimejiEnvironment.m
src/main/native/macjni/src/menu/: JniMenuListener.h  JniMenuListener.m  MacJniMenu.m  MacJniMenuItem.h  MacJniMenuItem.m
src/main/native/macjni/src/rendering/: MacJniNativeImage.m  MacJniShimejiWindow.m  ShimejiWindow.h  ShimejiWindow.m
src/main/native/panama/: CMakeLists.txt
src/main/native/panama/interfaces/: NativeEnvironment.h  NativeRenderer.h  NativeUi.h
src/main/native/panama/platform/glfw/: CMakeLists.txt  Environment.cpp  Menu.cpp  Renderer.cpp
src/main/native/panama/platform/glfw/glad/include/glad/: glad.h
src/main/native/panama/platform/glfw/glad/src/: glad.c
src/main/native/panama/platform/mac/: CMakeLists.txt  Environment.m  Menu.m  Renderer.h  Renderer.m
src/main/native/panama/src/mac/: Image.m  Menu.m  Renderer.m
src/main/nativeimpl/macclassic/: MacSwingJni.m
src/main/nativeimpl/macjni/: JdkCode.h  JniHelper.h  JniHelper.m  ShimejiWindow.m
src/main/objc/: com_group_finity_mascotnative_mac_MacJni.h  com_group_finity_mascotnative_mac_MacJni.m
src/main/resources/: behaviornames.properties  behaviornames_ar.properties  behaviornames_ca.properties  behaviornames_de.properties  behaviornames_en.properties  behaviornames_es.properties  behaviornames_fi.properties  behaviornames_fr.properties  behaviornames_fr_CA.properties  behaviornames_hr.properties  behaviornames_it.properties  behaviornames_ja.properties  behaviornames_ko.properties  behaviornames_nl.properties  behaviornames_pl.properties  behaviornames_pt_BR.properties  behaviornames_pt_PT.properties  behaviornames_ro.properties  behaviornames_ru.properties  behaviornames_sr.properties  behaviornames_vi.properties  behaviornames_zh_CN.properties  behaviornames_zh_TW.properties  language.properties  language_ar.properties  language_ca.properties  language_de.properties  language_en.properties  language_es.properties  language_fi.properties  language_fr.properties  language_fr_CA.properties  language_hr.properties  language_it.properties  language_ja.properties  language_ko.properties  language_nl.properties  language_pl.properties  language_pt_BR.properties  language_pt_PT.properties  (+8 more)
(+328 files in other folders)
